--- a/Myerp/Tpl/Chanpin/zituanbaozhang.html
+++ b/Myerp/Tpl/Chanpin/zituanbaozhang.html
@@ -516,6 +516,7 @@ jQuery().ready(function() {
       <php>}else{</php>
           <php>if($v['status_shenhe'] != '批准'){</php>
               <input type="button" class="button" value=" 批准 " id="btshenhe_<{$v['chanpinID']}>" onclick="doshenhe_baozhangitem('检出','报账项',<{$v['chanpinID']}>,'<{$v['title']}>');">
+          <php>}</php>
           <input type="button" class="button" value=" 审核回退 " onclick="if(window.confirm('审核回退？')==true)shenhe_back(<{$v['chanpinID']}>,'报账项','<{$actionmethod}>');">
       <php>}</php>
       
@@ -602,7 +603,8 @@ jQuery().ready(function() {
           <input type="button" class="button" value=" 申请审核 " id="btshenhe_<{$v['chanpinID']}>" onclick="doshenhe_baozhangitem('申请','报账项',<{$v['chanpinID']}>,'<{$v['title']}>');">
       <php>}else{</php>
           <php>if($v['status_shenhe'] != '批准'){</php>
-          <input type="button" class="button" value=" 批准 " id="btshenhe_<{$v['chanpinID']}>" onclick="doshenhe_baozhangitem('检出','报账项',<{$v['chanpinID']}>,'<{$v['title']}>');">
+              <input type="button" class="button" value=" 批准 " id="btshenhe_<{$v['chanpinID']}>" onclick="doshenhe_baozhangitem('检出','报账项',<{$v['chanpinID']}>,'<{$v['title']}>');">
+          <php>}</php>
           <input type="button" class="button" value=" 审核回退 " onclick="if(window.confirm('审核回退？')==true)shenhe_back(<{$v['chanpinID']}>,'报账项','<{$actionmethod}>');">
       <php>}</php>
       
