Signed-off-by: p308715744 <p3087157442000@yahoo.com.cn>

--- a/Myerp/Tpl/Chanpin/zituanbaozhang.html
+++ b/Myerp/Tpl/Chanpin/zituanbaozhang.html
@@ -119,7 +119,8 @@ function shenhe_after(data,status,info,type,idname){
 		setTimeout("location.reload()",2000);		
 	}
 	else{
-		art.dialog.get('id-demo').content(info).time(4000);
+		alert(info);
+		//art.dialog.get('id-demo').content(info).time(4000);
 	}
 }
 
