Signed-off-by: p308715744 <p3087157442000@yahoo.com.cn>

--- a/Myerp/Tpl/Chanpin/zituanbaozhang.html
+++ b/Myerp/Tpl/Chanpin/zituanbaozhang.html
@@ -102,7 +102,7 @@ function new_shanghutiaomu(){
 
 function add_after(data,status){
 	if(status == 1){
-		alert("操作成功！！");
+		alert("操作成功！！！");
 		location.reload();
 	}
 }
