--- a/Myerp/Tpl/Dijie/header_chanpin.html
+++ b/Myerp/Tpl/Dijie/header_chanpin.html
@@ -11,11 +11,11 @@ function doshenhe(dotype){
 		url:	SITE_INDEX+"Dijie/doshenhe",
 		data:	"dataID="+dataID+"&dotype="+dotype+"&datatype="+datatype+"&title="+title,
 		success:function(msg){
-			ThinkAjax.myAjaxResponse(msg,'resultdiv',shenhe_after);
+			ThinkAjax.myAjaxResponse(msg,'resultdiv',chanpinshenhe_after);
 		}
 	});
 }
-function shenhe_after(data,status){
+function chanpinshenhe_after(data,status){
 	if(status == 1){
 		alert(data['status_shenhe']+"操作成功！！");
 		location.reload();
