Signed-off-by: p308715744 <p3087157442000@yahoo.com.cn>

--- a/Myerp/Tpl/Chanpin/dingdanxinxi.html
+++ b/Myerp/Tpl/Chanpin/dingdanxinxi.html
@@ -317,6 +317,7 @@ function quxiao_after(data,status){
               <option value="对冲">对冲</option>
               <option value="月结">月结</option>
               <option value="VIP贵宾卡">VIP贵宾卡</option>
+              <option value="抵值券">抵值券</option>
             </select>
            <input type="hidden" name="ispay<{$i}>" id="ispay<{$vo[id]}>" <php>if(!$vo['ispay']){</php> value="未付款" <php>}</php> value="<{$vo['ispay']}>"/>
             <input style="width:60px;" type="button" value=" 确认 " onclick="dofukuan(<{$vo[id]}>)">
@@ -407,6 +408,7 @@ function quxiao_after(data,status){
               <option value="对冲">对冲</option>
               <option value="月结">月结</option>
               <option value="VIP贵宾卡">VIP贵宾卡</option>
+              <option value="抵值券">抵值券</option>
             </select>
            <input type="hidden" name="ispay<{$i}>" id="ispay<{$vo[id]}>" <php>if(!$vo['ispay']){</php> value="未付款" <php>}</php> value="<{$vo['ispay']}>"/>
             <input style="width:60px;" type="button" value=" 确认 " onclick="dofukuan(<{$vo[id]}>)">
