--- a/Myerp/Tpl/Chanpin/zituanxiangmu.html
+++ b/Myerp/Tpl/Chanpin/zituanxiangmu.html
@@ -165,6 +165,7 @@
               <option value="对冲">对冲</option>
               <option value="月结">月结</option>
               <option value="VIP贵宾卡">VIP贵宾卡</option>
+              <option value="抵值券">抵值券</option>
             </select></td>
         </tr>
         <tr>
