--- a/Myerp/Tpl/Xiaoshou/dingdanxinxi.html
+++ b/Myerp/Tpl/Xiaoshou/dingdanxinxi.html
@@ -346,6 +346,7 @@ function quxiao_after(data,status){
               <option value="对冲">对冲</option>
               <option value="月结">月结</option>
               <option value="VIP贵宾卡">VIP贵宾卡</option>
+              <option value="抵值券">抵值券</option>
             </select>
            <input type="hidden" name="ispay<{$i}>" id="ispay<{$vo[id]}>" <php>if(!$vo['ispay']){</php> value="未付款" <php>}</php> value="<{$vo['ispay']}>"/>
             <input style="width:60px;" type="button" value=" 确认 " onclick="dofukuan(<{$vo[id]}>)">
@@ -438,6 +439,7 @@ function quxiao_after(data,status){
               <option value="对冲">对冲</option>
               <option value="月结">月结</option>
               <option value="VIP贵宾卡">VIP贵宾卡</option>
+              <option value="抵值券">抵值券</option>
             </select>
            <input type="hidden" name="ispay<{$i}>" id="ispay<{$vo[id]}>" <php>if(!$vo['ispay']){</php> value="未付款" <php>}</php> value="<{$vo['ispay']}>"/>
             <input style="width:60px;" type="button" value=" 确认 " onclick="dofukuan(<{$vo[id]}>)">
