Signed-off-by: p308715744 <p3087157442000@yahoo.com.cn>

--- a/Myerp/Tpl/Index/search_xianlu_xiaoshou.html
+++ b/Myerp/Tpl/Index/search_xianlu_xiaoshou.html
@@ -32,7 +32,7 @@
                           <td nowrap="nowrap"><input type="text" class="title_1" value="<{$title}>"></td>
                           <td scope="row" nowrap="nowrap"> 团期 </td>
                           <td nowrap="nowrap">
-                          <input type="text" onfocus="WdatePicker()" class="chutuanriqi" value="<{$chutuanriqi}>" >
+                          <input type="text" onfocus="WdatePicker()" class="chufariqi" value="<{$chufariqi}>" >
                       </tbody>
                     </table>
                 </div>
