--- a/Myerp/Tpl/Index/search_xianlu_xiaoshou.html
+++ b/Myerp/Tpl/Index/search_xianlu_xiaoshou.html
@@ -32,7 +32,7 @@
                           <td nowrap="nowrap"><input type="text" class="title_1" value="<{$title}>"></td>
                           <td scope="row" nowrap="nowrap"> 团期 </td>
                           <td nowrap="nowrap">
-                          <input type="text" onfocus="WdatePicker()" class="chufariqi" value="<{$chufariqi}>" >
+                          <input type="text" onfocus="WdatePicker()" class="chutuanriqi" value="<{$chutuanriqi}>" >
                       </tbody>
                     </table>
                 </div>
@@ -130,7 +130,7 @@ function showsearch(s)
 function clearsearch(){
 		jQuery('.title_1').val('');
 		jQuery('.title_2').val('');
-		jQuery('.chufariqi').val('');
+		jQuery('.chutuanriqi').val('');
 		jQuery('.start_time').val('');
 		jQuery('.end_time').val('');
 }
@@ -139,8 +139,8 @@ function _dosearch(sorttabid){
 	var str ='';
 	if(jQuery('.title_'+sorttabid).val())
 	str += '/title/'+jQuery('.title_'+sorttabid).val();
-	if(jQuery('.chufariqi').val())
-	str += '/chufariqi/'+jQuery('.chufariqi').val();
+	if(jQuery('.chutuanriqi').val())
+	str += '/chutuanriqi/'+jQuery('.chutuanriqi').val();
 	if(jQuery('.start_time').val())
 	str += '/start_time/'+jQuery('.start_time').val();
 	if(jQuery('.end_time').val())
