Signed-off-by: p308715744 <p3087157442000@yahoo.com.cn>

--- a/Myerp/Tpl/SetSystem/templatelist.html
+++ b/Myerp/Tpl/SetSystem/templatelist.html
@@ -923,6 +923,10 @@ var SITE_INDEX = '<{:SITE_INDEX}>';
              <php>foreach($datalist as $v){if(!$v['parentID']){$typearray = explode(',',$v['type']);if(in_array('行政',$typearray)){</php>
                       { title: "<{$v[title]}>", systemID: "<{$v['systemID']}>" },
              <php>}}}</php>
+			 
+             <php>foreach($datalist as $v){if(!$v['status_system'])continue;</php>
+                      { title: "<{$v[title]}>", systemID: "<{$v['systemID']}>" },
+             <php>}</php>
          ];
         
         jQuery().ready(function() {
