Signed-off-by: p308715744 <p3087157442000@yahoo.com.cn>

--- a/Myerp/Tpl/Index/header.html
+++ b/Myerp/Tpl/Index/header.html
@@ -248,6 +248,7 @@ var SITE_PUBLIC = '<{:__PUBLIC__}>';
       <li> <a href="<{:SITE_INDEX}>Message/index/datatype/公告">公告</a> </li>
       <li> <a href="<{:SITE_INDEX}>Message/index/datatype/排团表">排团表</a> </li>
       <li> <a href="<{:SITE_INDEX}>Message/infohistory">系统提示</a> </li>
+      <li> <a href="<{:SITE_INDEX}>Caiwu/hetong">合同管理</a> </li>
       <php>}</php>
     </ul>
     </span> <span id="moduleLink_5" 
