--- a/Myerp/Tpl/Chanpin/left_kongguan.html
+++ b/Myerp/Tpl/Chanpin/left_kongguan.html
@@ -10,14 +10,14 @@
         </ul>
         <div id="navtab_1" class="leftList" <php>if($bzd_status){</php>style="display:none;"<php>}</php>>
           <h3 style="border:none">产品分类</h3>
-          <h3><span>国内/拼团</span><a href="<{:SITE_INDEX}>Chanpin/kongguan/guojing_copy/国内">&nbsp;<span>全部</span></a></h3>
+          <h3><span>国内产品中心</span><a href="<{:SITE_INDEX}>Chanpin/kongguan/guojing_copy/国内">&nbsp;<span>全部</span></a></h3>
           <ul id="ul_shortcuts">
             <li> <a href="<{:SITE_INDEX}>Chanpin/kongguan/kind_copy/近郊游">&nbsp;<span>近郊游</span></a> </li>
             <li> <a href="<{:SITE_INDEX}>Chanpin/kongguan/kind_copy/长线游">&nbsp;<span>长线游</span></a> </li>
             <li> <a href="<{:SITE_INDEX}>Chanpin/kongguan/kind_copy/自由人/guojing_copy/国内">&nbsp;<span>自由人</span></a> </li>
             <li> <a href="<{:SITE_INDEX}>Chanpin/kongguan/kind_copy/包团/guojing_copy/国内">&nbsp;<span>包团</span></a> </li>
           </ul>
-          <h3><span>境外</span><a href="<{:SITE_INDEX}>Chanpin/kongguan/guojing_copy/境外">&nbsp;<span>全部</span></a></h3>
+          <h3><span>国际产品中心</span><a href="<{:SITE_INDEX}>Chanpin/kongguan/guojing_copy/境外">&nbsp;<span>全部</span></a></h3>
           <ul id="ul_shortcuts">
             <li> <a href="<{:SITE_INDEX}>Chanpin/kongguan/kind_copy/韩国">&nbsp;<span>韩国</span></a> </li>
             <li> <a href="<{:SITE_INDEX}>Chanpin/kongguan/kind_copy/日本">&nbsp;<span>日本</span></a> </li>
@@ -40,14 +40,14 @@
         
         <div id="navtab_2" class="leftList" <php>if($bzd_status != '未报账'){</php>style="display:none;"<php>}</php>>
           <h3 style="border:none">产品分类</h3>
-          <h3><span>国内/拼团</span><a href="<{:SITE_INDEX}>Chanpin/kongguan/guojing_copy/国内/bzd_status/未报账">&nbsp;<span>全部</span></a></h3>
+          <h3><span>国内产品中心</span><a href="<{:SITE_INDEX}>Chanpin/kongguan/guojing_copy/国内/bzd_status/未报账">&nbsp;<span>全部</span></a></h3>
           <ul id="ul_shortcuts">
             <li> <a href="<{:SITE_INDEX}>Chanpin/kongguan/kind_copy/近郊游/bzd_status/未报账">&nbsp;<span>近郊游</span></a> </li>
             <li> <a href="<{:SITE_INDEX}>Chanpin/kongguan/kind_copy/长线游/bzd_status/未报账">&nbsp;<span>长线游</span></a> </li>
             <li> <a href="<{:SITE_INDEX}>Chanpin/kongguan/kind_copy/自由人/guojing_copy/国内/bzd_status/未报账">&nbsp;<span>自由人</span></a> </li>
             <li> <a href="<{:SITE_INDEX}>Chanpin/kongguan/kind_copy/包团/guojing_copy/国内/bzd_status/未报账">&nbsp;<span>包团</span></a> </li>
           </ul>
-          <h3><span>境外</span><a href="<{:SITE_INDEX}>Chanpin/kongguan/guojing_copy/境外/bzd_status/未报账">&nbsp;<span>全部</span></a></h3>
+          <h3><span>国际产品中心</span><a href="<{:SITE_INDEX}>Chanpin/kongguan/guojing_copy/境外/bzd_status/未报账">&nbsp;<span>全部</span></a></h3>
           <ul id="ul_shortcuts">
             <li> <a href="<{:SITE_INDEX}>Chanpin/kongguan/kind_copy/韩国/bzd_status/未报账">&nbsp;<span>韩国</span></a> </li>
             <li> <a href="<{:SITE_INDEX}>Chanpin/kongguan/kind_copy/日本/bzd_status/未报账">&nbsp;<span>日本</span></a> </li>
@@ -70,14 +70,14 @@
         
         <div id="navtab_3" class="leftList" <php>if($bzd_status != '已报账'){</php>style="display:none;"<php>}</php>>
           <h3 style="border:none">产品分类</h3>
-          <h3><span>国内/拼团</span><a href="<{:SITE_INDEX}>Chanpin/kongguan/guojing_copy/国内/bzd_status/已报账">&nbsp;<span>全部</span></a></h3>
+          <h3><span>国内产品中心</span><a href="<{:SITE_INDEX}>Chanpin/kongguan/guojing_copy/国内/bzd_status/已报账">&nbsp;<span>全部</span></a></h3>
           <ul id="ul_shortcuts">
             <li> <a href="<{:SITE_INDEX}>Chanpin/kongguan/kind_copy/近郊游/bzd_status/已报账">&nbsp;<span>近郊游</span></a> </li>
             <li> <a href="<{:SITE_INDEX}>Chanpin/kongguan/kind_copy/长线游/bzd_status/已报账">&nbsp;<span>长线游</span></a> </li>
             <li> <a href="<{:SITE_INDEX}>Chanpin/kongguan/kind_copy/自由人/guojing_copy/国内/bzd_status/已报账">&nbsp;<span>自由人</span></a> </li>
             <li> <a href="<{:SITE_INDEX}>Chanpin/kongguan/kind_copy/包团/guojing_copy/国内/bzd_status/已报账">&nbsp;<span>包团</span></a> </li>
           </ul>
-          <h3><span>境外</span><a href="<{:SITE_INDEX}>Chanpin/kongguan/guojing_copy/境外/bzd_status/已报账">&nbsp;<span>全部</span></a></h3>
+          <h3><span>国际产品中心</span><a href="<{:SITE_INDEX}>Chanpin/kongguan/guojing_copy/境外/bzd_status/已报账">&nbsp;<span>全部</span></a></h3>
           <ul id="ul_shortcuts">
             <li> <a href="<{:SITE_INDEX}>Chanpin/kongguan/kind_copy/韩国/bzd_status/已报账">&nbsp;<span>韩国</span></a> </li>
             <li> <a href="<{:SITE_INDEX}>Chanpin/kongguan/kind_copy/日本/bzd_status/已报账">&nbsp;<span>日本</span></a> </li>
