--- a/Myerp/Tpl/Dijie/left_chanpin.html
+++ b/Myerp/Tpl/Dijie/left_chanpin.html
@@ -5,7 +5,7 @@
           <ul id="ul_shortcuts">
             <li> <a href="<{:SITE_INDEX}>Dijie/index/status/准备/guojing/国内">&nbsp;<span>国内来团</span></a> </li>
           </ul>
-          <h3><span>境外</span></h3>
+          <h3><span>国际产品中心</span></h3>
           <ul id="ul_shortcuts">
             <li> <a href="<{:SITE_INDEX}>Dijie/index/status/准备/guojing/境外/kind/日本">&nbsp;<span>日本来团</span></a> </li>
             <li> <a href="<{:SITE_INDEX}>Dijie/index/status/准备/guojing/境外/kind/台湾">&nbsp;<span>台湾来团</span></a> </li>
@@ -18,7 +18,7 @@
           <ul id="ul_shortcuts">
             <li> <a href="<{:SITE_INDEX}>Dijie/index/status/在线/guojing/国内">&nbsp;<span>国内来团</span></a> </li>
           </ul>
-          <h3><span>境外</span></h3>
+          <h3><span>国际产品中心</span></h3>
           <ul id="ul_shortcuts">
             <li> <a href="<{:SITE_INDEX}>Dijie/index/status/在线/guojing/境外/kind/日本">&nbsp;<span>日本来团</span></a> </li>
             <li> <a href="<{:SITE_INDEX}>Dijie/index/status/在线/guojing/境外/kind/台湾">&nbsp;<span>台湾来团</span></a> </li>
@@ -34,7 +34,7 @@
           <ul id="ul_shortcuts">
             <li> <a href="<{:SITE_INDEX}>Dijie/index/status/截止/guojing/国内/status_baozhang/批准">&nbsp;<span>国内来团（已报账）</span></a> </li>
           </ul>
-          <h3><span>境外（<a href="<{:SITE_INDEX}>Dijie/index/status/截止/guojing/境外">全部</a>）</span></h3>
+          <h3><span>国际产品中心（<a href="<{:SITE_INDEX}>Dijie/index/status/截止/guojing/境外">全部</a>）</span></h3>
           <ul id="ul_shortcuts">
             <li> <a href="<{:SITE_INDEX}>Dijie/index/status/截止/guojing/境外/kind/日本/status_baozhang/未审核">&nbsp;<span>日本来团（未报账）</span></a> </li>
             <li> <a href="<{:SITE_INDEX}>Dijie/index/status/截止/guojing/境外/kind/日本/status_baozhang/批准">&nbsp;<span>日本来团（已报账）</span></a> </li>
@@ -49,7 +49,7 @@
           <ul id="ul_shortcuts">
             <li> <a href="<{:SITE_INDEX}>Dijie/index/guojing/国内/status_system/-1">&nbsp;<span>国内来团</span></a> </li>
           </ul>
-          <h3><span>境外</span></h3>
+          <h3><span>国际产品中心</span></h3>
           <ul id="ul_shortcuts">
             <li> <a href="<{:SITE_INDEX}>Dijie/index/guojing/境外/status_system/-1">&nbsp;<span>日本来团</span></a> </li>
             <li> <a href="<{:SITE_INDEX}>Dijie/index/guojing/境外/status_system/-1">&nbsp;<span>台湾来团</span></a> </li>
