--- a/Myerp/Tpl/Chanpin/left_fabu.html
+++ b/Myerp/Tpl/Chanpin/left_fabu.html
@@ -11,14 +11,14 @@
         </ul>
         <div id="navtab_1" class="leftList" <php>if($status != '准备' && $status){</php>style="display:none;"<php>}</php>>
           <h3 style=" text-align:center; border:none">准备中的产品</h3>
-          <h3><span>国内/拼团</span><a href="<{:SITE_INDEX}>Chanpin/index/guojing/国内/status/准备">&nbsp;<span>全部</span></a></h3>
+          <h3><span>国内产品中心</span><a href="<{:SITE_INDEX}>Chanpin/index/guojing/国内/status/准备">&nbsp;<span>全部</span></a></h3>
           <ul id="ul_shortcuts">
             <li> <a href="<{:SITE_INDEX}>Chanpin/index/guojing/国内/kind/近郊游/status/准备">&nbsp;<span>近郊游</span></a> </li>
             <li> <a href="<{:SITE_INDEX}>Chanpin/index/guojing/国内/kind/长线游/status/准备">&nbsp;<span>长线游</span></a> </li>
             <li> <a href="<{:SITE_INDEX}>Chanpin/index/guojing/国内/kind/自由人/status/准备">&nbsp;<span>自由人</span></a> </li>
             <li> <a href="<{:SITE_INDEX}>Chanpin/index/guojing/国内/kind/包团/status/准备">&nbsp;<span>包团</span></a> </li>
           </ul>
-          <h3><span>境外</span><a href="<{:SITE_INDEX}>Chanpin/index/guojing/境外/status/准备">&nbsp;<span>全部</span></a></h3>
+          <h3><span>国际产品中心</span><a href="<{:SITE_INDEX}>Chanpin/index/guojing/境外/status/准备">&nbsp;<span>全部</span></a></h3>
           <ul id="ul_shortcuts">
             <li> <a href="<{:SITE_INDEX}>Chanpin/index/guojing/境外/kind/韩国/status/准备">&nbsp;<span>韩国</span></a> </li>
             <li> <a href="<{:SITE_INDEX}>Chanpin/index/guojing/境外/kind/日本/status/准备">&nbsp;<span>日本</span></a> </li>
@@ -40,14 +40,14 @@
         </div>
         <div id="navtab_2" class="leftList" <php>if($status != '报名'){</php>style="display:none;"<php>}</php>>
           <h3 style=" text-align:center; border:none;">报名中的产品</h3>
-          <h3><span>国内/拼团</span><a href="<{:SITE_INDEX}>Chanpin/index/guojing/国内/status/报名">&nbsp;<span>全部</span></a></h3>
+          <h3><span>国内产品中心</span><a href="<{:SITE_INDEX}>Chanpin/index/guojing/国内/status/报名">&nbsp;<span>全部</span></a></h3>
           <ul id="ul_shortcuts">
             <li> <a href="<{:SITE_INDEX}>Chanpin/index/guojing/国内/kind/近郊游/status/报名">&nbsp;<span>近郊游</span></a> </li>
             <li> <a href="<{:SITE_INDEX}>Chanpin/index/guojing/国内/kind/长线游/status/报名">&nbsp;<span>长线游</span></a> </li>
             <li> <a href="<{:SITE_INDEX}>Chanpin/index/guojing/国内/kind/自由人/status/报名">&nbsp;<span>自由人</span></a> </li>
             <li> <a href="<{:SITE_INDEX}>Chanpin/index/guojing/国内/kind/包团/status/报名">&nbsp;<span>包团</span></a> </li>
           </ul>
-          <h3><span>境外</span><a href="<{:SITE_INDEX}>Chanpin/index/guojing/境外/status/报名">&nbsp;<span>全部</span></a></h3>
+          <h3><span>国际产品中心</span><a href="<{:SITE_INDEX}>Chanpin/index/guojing/境外/status/报名">&nbsp;<span>全部</span></a></h3>
           <ul id="ul_shortcuts">
             <li> <a href="<{:SITE_INDEX}>Chanpin/index/guojing/境外/kind/韩国/status/报名">&nbsp;<span>韩国</span></a> </li>
             <li> <a href="<{:SITE_INDEX}>Chanpin/index/guojing/境外/kind/日本/status/报名">&nbsp;<span>日本</span></a> </li>
@@ -70,14 +70,14 @@
         
         <div id="navtab_3" class="leftList" <php>if($status != '截止'){</php>style="display:none;"<php>}</php>>
           <h3 style=" text-align:center; border:none">已截止的产品</h3>
-          <h3><span>国内/拼团</span><a href="<{:SITE_INDEX}>Chanpin/index/guojing/国内/status/截止">&nbsp;<span>全部</span></a></h3>
+          <h3><span>国内产品中心</span><a href="<{:SITE_INDEX}>Chanpin/index/guojing/国内/status/截止">&nbsp;<span>全部</span></a></h3>
           <ul id="ul_shortcuts">
             <li> <a href="<{:SITE_INDEX}>Chanpin/index/guojing/国内/kind/近郊游/status/截止">&nbsp;<span>近郊游</span></a> </li>
             <li> <a href="<{:SITE_INDEX}>Chanpin/index/guojing/国内/kind/长线游/status/截止">&nbsp;<span>长线游</span></a> </li>
             <li> <a href="<{:SITE_INDEX}>Chanpin/index/guojing/国内/kind/自由人/status/截止">&nbsp;<span>自由人</span></a> </li>
             <li> <a href="<{:SITE_INDEX}>Chanpin/index/guojing/国内/kind/包团/status/截止">&nbsp;<span>包团</span></a> </li>
           </ul>
-          <h3><span>境外</span><a href="<{:SITE_INDEX}>Chanpin/index/guojing/境外/status/截止">&nbsp;<span>全部</span></a></h3>
+          <h3><span>国际产品中心</span><a href="<{:SITE_INDEX}>Chanpin/index/guojing/境外/status/截止">&nbsp;<span>全部</span></a></h3>
           <ul id="ul_shortcuts">
             <li> <a href="<{:SITE_INDEX}>Chanpin/index/guojing/境外/kind/韩国/status/截止">&nbsp;<span>韩国</span></a> </li>
             <li> <a href="<{:SITE_INDEX}>Chanpin/index/guojing/境外/kind/日本/status/截止">&nbsp;<span>日本</span></a> </li>
