Signed-off-by: heavenK <heaven@we54.com>

--- a/Myerp/Tpl/Chanpin/left_kongguan.html
+++ b/Myerp/Tpl/Chanpin/left_kongguan.html
@@ -27,6 +27,10 @@
             <li> <a href="<{:SITE_INDEX}>Chanpin/kongguan/kind_copy/欧美岛">&nbsp;<span>欧美岛</span></a> </li>
             <li> <a href="<{:SITE_INDEX}>Chanpin/kongguan/kind_copy/俄罗斯">&nbsp;<span>俄罗斯</span></a> </li>
             <li> <a href="<{:SITE_INDEX}>Chanpin/kongguan/kind_copy/越柬">&nbsp;<span>越柬</span></a> </li>
+            
+            <li> <a href="<{:SITE_INDEX}>Chanpin/kongguan/kind_copy/澳洲">澳洲 </a> </li>
+          	<li> <a href="<{:SITE_INDEX}>Chanpin/kongguan/kind_copy/中东非">中东非 </a> </li>
+            
             <li> <a href="<{:SITE_INDEX}>Chanpin/kongguan/kind_copy/自由人/guojing_copy/境外">&nbsp;<span>自由人</span></a> </li>
             <li> <a href="<{:SITE_INDEX}>Chanpin/kongguan/kind_copy/包团/guojing_copy/境外">&nbsp;<span>包团</span></a> </li>
           </ul>
