--- a/Myerp/Tpl/Index/header.html
+++ b/Myerp/Tpl/Index/header.html
@@ -163,6 +163,8 @@ var SITE_PUBLIC = '<{:__PUBLIC__}>';
           <li> <a href="<{:SITE_INDEX}>Chanpin/fabu/kind/欧美岛/guojing/境外">欧美岛 </a> </li>
           <li> <a href="<{:SITE_INDEX}>Chanpin/fabu/kind/俄罗斯/guojing/境外">俄罗斯 </a> </li>
           <li> <a href="<{:SITE_INDEX}>Chanpin/fabu/kind/越柬/guojing/境外">越柬 </a> </li>
+          <li> <a href="<{:SITE_INDEX}>Chanpin/fabu/kind/澳洲/guojing/境外">澳洲 </a> </li>
+          <li> <a href="<{:SITE_INDEX}>Chanpin/fabu/kind/中东非/guojing/境外">中东非 </a> </li>
           <li> <a href="<{:SITE_INDEX}>Chanpin/fabu/kind/自由人/guojing/境外">境外自由人 </a> </li>
           <li> <a href="<{:SITE_INDEX}>Chanpin/fabu/kind/包团/guojing/境外">境外包团 </a> </li>
         </ul>
