Signed-off-by: heavenK <heaven@we54.com>

--- a/Myerp/Tpl/Chanpin/left_fabu.html
+++ b/Myerp/Tpl/Chanpin/left_fabu.html
@@ -29,8 +29,8 @@
             <li> <a href="<{:SITE_INDEX}>Chanpin/index/guojing/境外/kind/俄罗斯/status/准备">&nbsp;<span>俄罗斯</span></a> </li>
             <li> <a href="<{:SITE_INDEX}>Chanpin/index/guojing/境外/kind/越柬/status/准备">&nbsp;<span>越柬</span></a> </li>
             
-            <li> <a href="<{:SITE_INDEX}>Chanpin/index/guojing/境外/kind/澳洲/status/准备">澳洲 </a> </li>
-          	<li> <a href="<{:SITE_INDEX}>Chanpin/index/guojing/境外/kind/中东非/status/准备">中东非 </a> </li>
+            <li> <a href="<{:SITE_INDEX}>Chanpin/index/guojing/境外/kind/澳洲/status/准备">&nbsp;<span>澳洲</span> </a> </li>
+          	<li> <a href="<{:SITE_INDEX}>Chanpin/index/guojing/境外/kind/中东非/status/准备">&nbsp;<span>中东非</span> </a> </li>
             
             <li> <a href="<{:SITE_INDEX}>Chanpin/index/guojing/境外/kind/自由人/status/准备">&nbsp;<span>自由人</span></a> </li>
             <li> <a href="<{:SITE_INDEX}>Chanpin/index/guojing/境外/kind/包团/status/准备">&nbsp;<span>包团</span></a> </li>
