--- a/Myerp/Tpl/Index/header.html
+++ b/Myerp/Tpl/Index/header.html
@@ -197,7 +197,7 @@ var SITE_PUBLIC = '<{:__PUBLIC__}>';
         </ul>
       </li>
       <li> <a href="<{:SITE_INDEX}>Caiwu/danxiangfuwu">单项服务</a> </li>
-      
+      <li> <a href="<{:SITE_INDEX}>Caiwu/jixiao_tongji/type/员工">统计(绩效)</a> </li>
       <li> <a href="<{:SITE_INDEX}>Caiwu/yingshou_tongji">统计(营收)</a> </li>
       <li> <a href="<{:SITE_INDEX}>Caiwu/hetong">合同管理</a> </li>
     </ul>
