--- a/Myerp/Tpl/Index/search_xianlu_xiaoshou.html
+++ b/Myerp/Tpl/Index/search_xianlu_xiaoshou.html
@@ -33,6 +33,8 @@
                           <td scope="row" nowrap="nowrap"> 团期 </td>
                           <td nowrap="nowrap">
                           <input type="text" onfocus="WdatePicker()" class="chutuanriqi" value="<{$chutuanriqi}>" >
+                          <td scope="row" nowrap="nowrap"> 单位 </td>
+                          <td nowrap="nowrap"><input type="text" class="danwei" value="<{$danwei}>"></td>
                       </tbody>
                     </table>
                 </div>
@@ -145,6 +147,8 @@ function _dosearch(sorttabid){
 	str += '/start_time/'+jQuery('.start_time').val();
 	if(jQuery('.end_time').val())
 	str += '/end_time/'+jQuery('.end_time').val();
+	if(jQuery('.danwei').val())
+	str += '/bumen_copy/'+jQuery('.danwei').val();
 	dosearch(str);
 }
 </script>
