--- a/Myerp/Tpl/Xiaoshou/zituan.html
+++ b/Myerp/Tpl/Xiaoshou/zituan.html
@@ -177,17 +177,7 @@ $(function(){
   
   <div class="ks_footer"><!--底部--> 
     <em></em>
-    <ul>
-      <li>联合路旗舰店：0411-82111105 \ 82111106 \ 82111107 \ 82111108</li>
-      <li>人民路旗舰店：0411-82657676 \ 82657070 \ 82652323 \ 82655050</li>
-      <li>国内接待电话：0411-84305290 \ 84305295</li>
-      <li>日本入境部：0411-84317755</li>
-      <li>劳动公园：0411-82556009 \ 83696009</li>
-      <li>金州区：0411-87685600 \ 87693699</li>
-      <li>普 兰 店：0411-83112367 \ 83114954</li>
-      <li>瓦房店：0411-66503722 \ 66503733</li>
-    </ul>
-    <i>Copyright © 2005-2011 dlgulian.com　All rights reserved 大连古莲国际旅行社 版权所有<br />
+    <i>Copyright © 2005-2011　All rights reserved 沃嘉科技有限公司 版权所有<br />
     网站经营许可证号辽ICP备案06006255号</i> </div>
 </div>
 
