--- a/Myerp/Tpl/Xiaoshou/printzituan.html
+++ b/Myerp/Tpl/Xiaoshou/printzituan.html
@@ -61,8 +61,8 @@ td {
       <tr>
         <td width="210" align="left"><img src="<{:__PUBLIC__}>/gulianstyle/images/dlgllogo.jpg" width="210" height="50" /></td>
         <td width="480" align="center"><span class="gl_td_line">联系人：<php>echo $login_user['title']</php>&nbsp;&nbsp; 联系电话：<php>echo $login_user['telnum']</php> <br />  
-          公司地址：<php>echo cookie('_usedbumenaddr')</php> 
-          传真：<php>echo cookie('_usedbumenfax')</php>  </span></td>
+          公司地址：大连市中山路3号
+          传真：0411-82828287 </span></td>
       </tr>
     </thead>
   </table>
@@ -78,7 +78,7 @@ td {
       <td width="13%" align="center" bgcolor="#FFFFFF">&nbsp;出团日期：</td>
       <td width="20%" bgcolor="#FFFFFF" class="gl_td_center"><{$zituan['chutuanriqi']}></td>
       <td width="13%" align="center" bgcolor="#FFFFFF">&nbsp;回团日期：</td>
-      <td width="20%" bgcolor="#FFFFFF" class="gl_td_center"><php>echo jisuanriqi($zituan['chutuanriqi'],$xituan['xianlulist']['tianshu']);</php></td>
+      <td width="20%" bgcolor="#FFFFFF" class="gl_td_center"><php>echo jisuanriqi($zituan['chutuanriqi'],$xianlu['xianlu']['tianshu']);</php></td>
     </tr>
   </table>
   <table width="100%" height="5" border="0" align="center" cellpadding="0" cellspacing="0">
@@ -153,8 +153,8 @@ td {
       <tr>
         <td width="239" align="center"><img src="<{:__PUBLIC__}>/gulianstyle/images/logo_p.gif" width="239" height="34" border="0" /></td>
         <td width="480" align="center"><span class="gl_td_line">联系人：<php>echo $login_user['title']</php>&nbsp;&nbsp; 联系电话：<php>echo $login_user['telnum']</php> <br />  
-          公司地址：<php>echo cookie('_usedbumenaddr')</php> 
-          传真：<php>echo cookie('_usedbumenfax')</php>  </span></td>
+          公司地址：大连市中山路3号
+          传真：0411-82828287   </span></td>
       </tr>
       <tr>
         <td colspan="2" align="center" class="gl_td_line">&nbsp;</td>
