Signed-off-by: heavenK <heaven@we54.com>

--- a/Myerp/Tpl/Xiaoshou/baoming_qianzheng.html
+++ b/Myerp/Tpl/Xiaoshou/baoming_qianzheng.html
@@ -220,10 +220,15 @@ function ajaxalert(title){
           <td align="left" style="height: 32px" colspan="3"><{$qianzheng['remark']}></td>
         </tr>
         <tr>
+          <td align="left" style="height: 32px"> 是否开具发票：</td>
+          <td align="left" style="height: 32px"><input name="isbill" type="checkbox" value="1"></td>
+          <td align="left" style="height: 32px"> 发票抬头：</td>
+          <td align="left" style="height: 32px"><input name="bill_head" type="text" ></td>
+        </tr>
+        <tr>
           <td align="left" style="height: 32px"> 备注：</td>
           <td align="left" style="height: 32px"  colspan="3"><input name="remark" type="text"  style="width:300px;" id="remark" value="<{$remark}>" ></td>
         </tr>
-        
         <tr>
           <td align="left" style="height: 32px" colspan="4"></td>
         </tr>
