--- a/Myerp/Tpl/Qianzheng/dingdanxinxi.html
+++ b/Myerp/Tpl/Qianzheng/dingdanxinxi.html
@@ -187,6 +187,14 @@ function quxiao_after(data,status){
           <td align="left" style="height: 32px"> 金额：</td>
           <td align="left" style="height: 32px"><{$dingdan['jiage']}></td>
         </tr>
+        <tr>
+          <td align="left" style="height: 32px"> 是否开具发票：</td>
+          <td align="left" style="height: 32px"><php>if($dingdan['isbill'])echo "是";else echo "否"; </php></td>
+          <td align="left" style="height: 32px"> 发票抬头：</td>
+          <td align="left" style="height: 32px"><php>echo $dingdan['bill_head']</php></td>
+          <td align="left" style="height: 32px"></td>
+          <td align="left" style="height: 32px"></td>
+        </tr>
       </tbody>
     </table>
     
