--- a/Myerp/Tpl/Xiaoshou/baomingnext.html
+++ b/Myerp/Tpl/Xiaoshou/baomingnext.html
@@ -167,6 +167,7 @@ function save(){
           <td align="left" style="height: 32px"> 证件号码： </td>
           <td align="left" style="height: 32px"> 生日： </td>
           <td align="left" style="height: 32px"> 户籍地： </td>
+          <td align="left" style="height: 32px"> 证件签发日： </td>
           <td align="left" style="height: 32px"> 证件有效期： </td>
           <td align="left" style="height: 32px"> 应付： </td>
           <td align="left" style="height: 32px"> 备注： </td>
@@ -198,6 +199,7 @@ function save(){
           <td align="left" style="height: 32px"><input name="zhengjianhaoma<{$i}>" type="text" ></td>
           <td align="left" style="height: 32px"><input name="chushengriqi<{$i}>" type="text" class="Wdate" onfocus="WdatePicker()"></td>
           <td align="left" style="height: 32px"><input name="hujidi<{$i}>" type="text"></td>
+          <td align="left" style="height: 32px"><input name="zhengjianqianfariqi<{$i}>" type="text" class="Wdate" onfocus="WdatePicker()"></td>
           <td align="left" style="height: 32px"><input name="zhengjianyouxiaoqi<{$i}>" type="text" class="Wdate" onfocus="WdatePicker()"></td>
           <td align="left" style="height: 32px"><input name="price<{$i}>" type="text" value="<{$vo['price']}>" ></td>
           <td align="left" style="height: 32px"><input name="remark<{$i}>" type="text"></td>
