Signed-off-by: heavenK <heaven@we54.com>

--- a/Myerp/Tpl/Chanpin/exports_1.html
+++ b/Myerp/Tpl/Chanpin/exports_1.html
@@ -54,7 +54,7 @@
   <php>}</php>
     </tbody>
 </table>
-<php>}elese{</php>
+<php>}else{</php>
 <table class="zsj" width="100%" border="1" cellspacing="0" cellpadding="0">
   <tbody>
     <tr>
