Signed-off-by: heavenK <heaven@we54.com>

--- a/Myerp/Tpl/Xiaoshou/index.html
+++ b/Myerp/Tpl/Xiaoshou/index.html
@@ -74,6 +74,11 @@
                   <php>}</php>
                   href="<{:SITE_INDEX}>Xiaoshou/index/xianlu_kind/东南亚">东南亚</a> </li>
                 <li> <a 
+                  <php>if($markpos == '欧美岛'){</php>
+                  class="current"
+                  <php>}</php>
+                  href="<{:SITE_INDEX}>Xiaoshou/index/xianlu_kind/欧美岛">欧美岛</a> </li>
+                <!--<li> <a 
                   <php>if($markpos == '欧美'){</php>
                   class="current"
                   <php>}</php>
@@ -82,7 +87,7 @@
                   <php>if($markpos == '海岛'){</php>
                   class="current"
                   <php>}</php>
-                  href="<{:SITE_INDEX}>Xiaoshou/index/xianlu_kind/海岛">海岛</a> </li>
+                  href="<{:SITE_INDEX}>Xiaoshou/index/xianlu_kind/海岛">海岛</a> </li>-->
               </ul>
             </div>
             
