Signed-off-by: heavenK <heaven@we54.com>

--- a/Myerp/Tpl/Index/error.html
+++ b/Myerp/Tpl/Index/error.html
@@ -61,7 +61,7 @@ h2{
 <h2>服务器信息 </h2>
 <div>您可以选择 [ <a href="javascript:history.go(0)">重试</a> ] [ <a href="javascript:history.back()">返回</a> ] [ <a href="javascript:logout()">注销</a> ] 或者 [ <a href="<{:SITE_INDEX}>">回到首页</a> ]</div>
 <p class="title">[ 错误信息 ]</p>
-<p class="message">入QQ群：古莲后台网络解决群  88089716</p>
+<p class="message">进入QQ群：古莲后台网络解决群  88089716</p>
 <p class="message">截图与网址一起发到群里</p>
 <p class="message">错误内容：<{$message}></p>
 </div>
