Signed-off-by: heavenK <heaven@we54.com>

--- a/Myerp/Tpl/Index/login.html
+++ b/Myerp/Tpl/Index/login.html
@@ -23,7 +23,7 @@
             <div id="resultdiv" class="resultdiv" style="text-align:center"></div>
             <div id="resultdiv_2" class="resultdiv"></div>
             
-            <form id="form" name="form" method="post">
+            <form id="form" name="form" method="post" action="<{:SITE_INDEX}>Index/dologin">
              
 				<table width="350px" cellspacing="0" cellpadding="0" border="0" align="center">
 				<tbody><tr>
