--- a/Myerp/Tpl/Index/login.html
+++ b/Myerp/Tpl/Index/login.html
@@ -23,8 +23,8 @@
             <div id="resultdiv" class="resultdiv" style="text-align:center"></div>
             <div id="resultdiv_2" class="resultdiv"></div>
             
-            <form id="form" name="form" method="post" action="<{:SITE_INDEX}>Index/dologin">
-             
+            <form id="form" name="form" method="post">
+              <input type="hidden" name="ajax" value="1"> <!--ajax提示-->
 				<table width="350px" cellspacing="0" cellpadding="0" border="0" align="center">
 				<tbody><tr>
 					<td style="padding-bottom: 10px;"><b>欢迎来到</b><br>
@@ -61,7 +61,7 @@
 									</td></tr>
 									<tr>
 										<td>&nbsp;</td>
-										<td><input title="登录" type="submit" tabindex="4" id="login_button" name="Login" value="登录"><br>&nbsp;</td>		
+										<td><input title="登录" type="button" tabindex="4" id="login_button" name="Login" value="登录" onClick="dologin();"><br>&nbsp;</td>		
 									</tr>
 								</tbody></table>
 							</form>
