Signed-off-by: neconano <308715744@qq.com>

--- a/Myerp/Tpl/Index/login.html
+++ b/Myerp/Tpl/Index/login.html
@@ -27,7 +27,7 @@
               <input type="hidden" name="ajax" value="1"> <!--ajax提示-->
 				<table width="350px" cellspacing="0" cellpadding="0" border="0" align="center">
 				<tbody><tr>
-					<td style="padding-bottom: 10px;"><b>欢迎来到</b><br>
+					<td style="padding-bottom: 10px;"><b>欢迎来到:</b><br>
 						<img width="340" height="25" alt="Sugar" src="<{:__PUBLIC__}>/myerp/images/sugar_md.png">
 					</td>
 				</tr>
