--- a/Myerp/Tpl/Chanpin/kongguan.html
+++ b/Myerp/Tpl/Chanpin/kongguan.html
@@ -80,6 +80,7 @@
                     <input type="button" class="button" value=" 截止/报名 " onclick="jiezhiorbaoming()">
                     <input type="button" class="button" value=" 下架/上架 " onclick="onoffshop()">
                     <input type="button" class="button" value=" 删除 " onclick="if(window.confirm('确认删除？')==true)to_delete()">
+                    <a target="_blank" href="/index.php?s=/Chanpin/kongguan/bzd_status/未报账/returnType/exl">导出excel</a>
 					<td nowrap="nowrap" align="right" class="paginationChangeButtons" style="color:#090"><{$page}></td>
                 </tr>
               </tbody>
